--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.14.0",
     "@grpc/proto-loader": "^0.8.0",
+    "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.6.2",
     "better-sqlite3": "^9.2.2",
     "bip32": "^5.0.0",
@@ -39,6 +40,7 @@
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
     "tiny-secp256k1": "^2.2.4",
+    "varuint-bitcoin": "^1.1.2",
     "ws": "^8.16.0"
   },
   "devDependencies": {
