--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.js",
   "type": "module",
   "scripts": {
-    "start": "node debug-railway.js",
+    "start": "node server/index.js",
     "dev": "nodemon server/index.js",
     "init-db": "node server/db/init.js",
     "test": "node test-connections.js",
